--- a/html-css/music-site/style.css
+++ b/html-css/music-site/style.css
@@ -18,7 +18,7 @@
 
 body {
     display: grid;
-    grid-template-rows: 8.5vh 72.5vh 10vh;
+    grid-template-rows: 8.5vh 77.5vh 10vh;
     grid-template-columns: 12vw 67vw 20vw;
     grid-gap: 10px;
     background-color: var(--main-bg-color);
@@ -333,15 +333,14 @@ aside {
 
     #music-player {
         display: none;
-        /* grid-area: unset;
-        position: fixed;
-        bottom: 10%; */
+        grid-area: unset;
     }
 
     #nav {
         all: unset;
         width: 100%;
         grid-area: 3/1/3/1;
+        border-radius: 0 0 1vw 1vw;
         background-color: #eb9c00;
 
     }
