--- a/html-css/music-site/style.css
+++ b/html-css/music-site/style.css
@@ -1,5 +1,6 @@
 :root {
     --main-bg-color: #000000;
+    --primary-dark-color: #111111;
     --main-dark-color: #222222;
     --main-font-color: #ffffff;
     --style-font-colour: #eb9c00;
@@ -22,7 +23,7 @@ body {
     grid-template-columns: 12vw 67vw 20vw;
     grid-gap: 10px;
     background-color: var(--main-bg-color);
-    font-family: var(--common-font);
+    font-family: var(--design-font);
     color: var(--main-font-color);
     overflow: hidden;
 }
@@ -47,7 +48,7 @@ header {
     align-items: center;
     width: 15%;
     height: 100%;
-    background-color: #111111;
+    background-color: var(--primary-dark-color);
     border-radius: 1vw 0 0 1vw;
 
 }
@@ -80,7 +81,7 @@ form {
     width: 28vw;
     height: 50%;
     /* padding: 1% 0; */
-    background-color: #111111;
+    background-color: var(--primary-dark-color);
     border-radius: 0 1vw 1vw 0;
     border-width: 1px 1px 1px 0;
     border-style: solid;
@@ -97,7 +98,7 @@ form {
     width: 10vw;
     height: 50%;
     padding-left: 2%;
-    background-color: #111111;
+    background-color: var(--primary-dark-color);
     border-radius: 1vw 0 0 1vw;
     border-width: 1px 0 1px 1px;
     border-style: solid;
@@ -110,10 +111,10 @@ form {
 
 .notification {
     margin: 1%;
-    color: #111111;
+    color: var(--primary-dark-color);
     padding: 0.6rem 0.8rem;
     border-radius: 100%;
-    background-color: #eb9c00;
+    background-color: var(--style-font-colour);
 }
 
 .plans {
@@ -130,6 +131,7 @@ input::placeholder {
 }
 
 nav {
+    font-family: var(--common-font);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -156,7 +158,7 @@ nav {
 }
 
 .nav-tabs:hover:not(.nav-profile) {
-    background-color: #111111;
+    background-color: var(--primary-dark-color);
 }
 
 .nav-visible {
@@ -193,7 +195,7 @@ nav {
 }
 
 .copyright {
-    background-color: #111111;
+    background-color: var(--primary-dark-color);
     font-size: 80%;
     padding: 12% 5%;
     margin-bottom: 8%;
@@ -217,6 +219,7 @@ main {
 
 .sub-title {
     font-size: 1.5rem;
+    font-family: var(--heading-font);
     margin: 15px 0;
     padding: 0 10px;
 }
@@ -529,7 +532,7 @@ aside {
         z-index: 1;
         position: relative;
         left: 16.5%;
-        background-color: #eb9c00;
+        background-color: var(--style-font-colour);
         border-radius: 100px 0 0 100px;
     }
 
@@ -559,7 +562,7 @@ aside {
         width: 100%;
         grid-area: 3/1/3/1;
         border-radius: 0 0 1vw 1vw;
-        background-color: #eb9c00;
+        background-color: var(--style-font-colour);
 
     }
 
